# api/api.yaml
@@ -18,7 +18,7 @@ externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 servers:
-  - url: http://3.238.98.186:8080
+  - url: http://3.219.218.49:8080
 tags:
   - name: issues
     description: Everything about your issues
@@ -325,6 +325,85 @@ paths:
               examples:
                 errorExample:
                   $ref: '#/components/examples/error409'
+
+  /issues/bulk_insert:
+    post:
+      tags:
+        - issues
+      summary: Bulk insert d'issues
+      description: Bulk insert d'issues
+      operationId: BulkInsert
+      requestBody:
+        description: Bulk identifier
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/BulkInsert'
+      responses:
+        '200':
+          description: 'Successful operation'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ShowIssue'
+        '304':
+          description: 'Error: Not Modified'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error304'
+        '400':
+          description: 'Error: Bad Request'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error400'
+        '401':
+          description: 'Error: Unauthorized'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error401'
+        '403':
+          description: 'Error: Forbidden'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error403'
+        '404':
+          description: 'Error: Not Found'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error404'
+        '409':
+          description: 'Conflict with the operation'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error409'
+      security:
+        - apiKey: []
+
   /users:
     get:
       tags:
@@ -589,6 +668,14 @@ components:
           "block_status": true,
           "reason_block": "Prueba",
           "description": "Esto es una prueba",
+        }
+    BulkInsert:
+      type: object
+      additionalProperties:
+        type: string
+      example:
+        "issue": {
+          "issue": "New name"
         }
     ErrorResult:
         type: object
